--- a/css/resume.css
+++ b/css/resume.css
@@ -10,6 +10,11 @@ body {
   color: #D2B4DE;
 }
 
+#rwlink{
+  font-family: 'Muli', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  color: #D2B4DE;
+}
+
 @media (min-width: 992px) {
   body {
     padding-top: 0;
